# remote-CLI-for-AI-Agent

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  USAGE.md  build.rs  install.sh
.github/workflows/: codeql.yml
assets/: index.html
docs/plans/: 2026-02-25-codewebway-implementation.md  2026-02-25-rust-web-terminal-design.md  2026-02-25-rust-webtty-implementation.md  2026-02-28-terminal-only-design.md
src/: config.rs  fleet.rs  main.rs  server.rs  session.rs
