[package]
name = "codewebway"
version = "0.3.34"
edition = "2021"

[[bin]]
name = "codewebway"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
rust-embed = "8"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
rand = "0.8"
rpassword = "7"
sha2 = "0.10"
tower-http = { version = "0.6", features = ["compression-gzip", "compression-br"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }

[profile.release]
opt-level = 3
strip = true
lto = true
